--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^5.4.0",
     "@tailwindcss/vite": "^4.1.17",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -18,13 +19,16 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@nomicfoundation/hardhat-ethers": "^3.1.2",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "ethers": "^6.15.0",
     "globals": "^16.5.0",
+    "hardhat": "^2.27.0",
     "vite": "^7.2.2"
   }
 }
